# yp-streaming-quotes

./: Cargo.toml  README.md  rustfmt.toml
assets/: all_tickers.txt
src/: lib.rs  protocol.rs  quote.rs  tickers.rs
