[package]
name = "streaming_quotes"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3",  }

anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.1"
thiserror = "2.0.18"
tracing = "0.1.44"
[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
